@@ -267,6 +267,8 @@ void dtls1_clear(SSL *s)
 	ssl3_clear(s);
 	if (s->options & SSL_OP_CISCO_ANYCONNECT)
 		s->version=DTLS1_BAD_VER;
+	else if (s->method->version == DTLS_ANY_VERSION)
+		s->version=DTLS1_2_VERSION;
 	else
 		s->version=s->method->version;
 	}
@@ -526,5 +528,3 @@ static int dtls1_handshake_write(SSL *s)
 	{
 	return dtls1_do_write(s, SSL3_RT_HANDSHAKE);
 	}
-	
-	
